--- a/index.html
+++ b/index.html
@@ -61,6 +61,24 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
+							<section>
+								<h2>Contact me</h2>
+									<li><a href="#" class="icon style2 fa-phone"></a>&thinsp;&thinsp;&thinsp;+852 63740283</li>
+									<li><a href="mailto:tikon.lui@gmail.com" class="icon style2 fa-envelope-o"></a>&thinsp;&thinsp;&thinsp;tikon.lui@gmail.com</li>
+									<li><a target="_blank" href="https://www.linkedin.com/in/johnson-lui-87711890/" class="icon style2 fa-linkedin"></a>&thinsp;&thinsp;&thinsp;Johnson Lui</li>
+									<li><a target="_blank" href="https://github.com/johnsonlui" class="icon style2 fa-github"></a>&thinsp;&thinsp;&thinsp;johnsonlui</li>
+											
+								<!--ul class="icons">
+									<li><a href="#" class="icon style2 fa-twitter"></a>		Twitter</li>
+									<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
+									<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="#" class="icon style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
+									<li><a href="#" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="#" class="icon style2 fa-500px"><span class="label">500px</span></a></li>
+									<li><a href="#" class="icon style2 fa-phone"><span class="label">Phone</span></a></li>
+									<li><a href="#" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
+								</ul-->
+							</section>
 							<ul class="copyright">
 								<li>&copy; Johnson Lui. All rights reserved</li>
 							</ul>
