--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						<div class="inner">
 							<header>
 								<h1>Hi there, I am Johnson Lui.</h1>
-								<p>I'm a Data Sciencem, Machine Learning and Technology Enthusiast. I am an active self-learner who is fascinated with technology-powered products. I’d love to combine my passion for technology-powered products with my professional skills to continue delivering great products to people. </p>
+								<p>I'm a Data Science, Machine Learning and Technology Enthusiast. I am an active self-learner who is fascinated with technology-powered products. I’d love to combine my passion for technology-powered products with my professional skills to continue delivering great products to people. </p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
@@ -61,6 +61,14 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
+							<section>
+								<h2>Contact me</h2>
+									<li><a href="#" class="icon style2 fa-phone"></a>&thinsp;&thinsp;&thinsp;+852 63740283</li>
+									<li><a href="mailto:tikon.lui@gmail.com" class="icon style2 fa-envelope-o"></a>&thinsp;&thinsp;&thinsp;tikon.lui@gmail.com</li>
+									<li><a target="_blank" href="https://www.linkedin.com/in/johnson-lui-87711890/" class="icon style2 fa-linkedin"></a>&thinsp;&thinsp;&thinsp;Johnson Lui</li>
+									<li><a target="_blank" href="https://github.com/johnsonlui" class="icon style2 fa-github"></a>&thinsp;&thinsp;&thinsp;johnsonlui</li>
+								
+							</section>
 							<ul class="copyright">
 								<li>&copy; Johnson Lui. All rights reserved</li>
 							</ul>
